color range functional

--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
 
     <div class="range-colors">
 <span class="range-slider-text">Hex</span>
-        <input type="text" class="range-slider-value-hex" value="0">
+        <input type="text" class="range-slider-value-hex" id="input-color-hexvalue" value="0">
 
    
     </div>
     <div class="range-colors">
         <label for="range-slider-value" class="range-slider-text">R</label>
-        <input type="text" id="range-r" class="range-slider-value" value="0">
-        <input class="range-slider-range" type="range" value="0" min="0" max="255" >
+        <input type="number" id="range-r" class="range-slider-value" value="0">
+        <input class="range-slider-range" type="range" id="slide-range-r" value="0" min="0" max="255" >
         
     </div>
     <div class="range-colors">
         <label for="range-slider-value" class="range-slider-text">G</label>
-        <input type="text" id="range-g" class="range-slider-value" value="0">
-        <input class="range-slider-range" type="range" value="0" min="0" max="255">
+        <input type="number" id="range-g" class="range-slider-value" value="0">
+<input class="range-slider-range" type="range" id="slide-range-g" value="0" min="0" max="255">
  
     </div>
     <div class="range-colors">
         <label for="range-slider-value" class="range-slider-text">B</label>
-        <input type="text" id="range-b" class="range-slider-value" value="0">
-        <input class="range-slider-range" type="range" value="0" min="0" max="255">
+        <input type="number" id="range-b" class="range-slider-value" value="0">
+<input class="range-slider-range" type="range" id="slide-range-b" value="0" min="0" max="255">
     
     </div>
 </div>
