--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <input type="hidden" value="30">
 </span>
     </div>
-<span>Custom grid size</span>
+<label class="toolboxLabel">Custom grid size</label>
     <form id="sizePicker">
      <div class="tools">
 
